Fix some layout jank with the key on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,13 +26,19 @@ h2 {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  padding: 20px;
+}
+
+.intro > div {
+  flex: 1;
+  text-align: right;
 }
 
 .intro > div + div {
+  text-align: left;
+  color: #888888;
   margin-left: 20px;
   padding-left: 20px;
-  border-left: 1px solid #888888;
 }
 
 .family-tree {
